fix(button-group): md breakpoint alignment

--- a/packages/styles/scss/components/buttongroup/_buttongroup.scss
+++ b/packages/styles/scss/components/buttongroup/_buttongroup.scss
@@ -23,7 +23,7 @@
     grid-auto-rows: 1fr;
     grid-gap: $carbon--layout-01;
 
-    @include carbon--breakpoint(lg) {
+    @include carbon--breakpoint(md) {
       display: inline-grid;
       grid-template-columns: repeat(
         var(--#{$dds-prefix}--button-group--item-count),
